# seed-bag-box

./: .gitignore  BUILD_STATUS.md  Cargo.toml  FEATURES.md  Makefile  PACT_TESTING.md  QUICK_START.md  README.md  template.yaml  test-mock-api.sh
docs/: BAG_FOLDING_INSTRUCTIONS.md  BOTANICAL_STAGES.md  DEPLOYMENT.md  FOOD_SAFETY_RESEARCH_REVIEW.md  GERMINATION_SHIPPING_GUIDE.md  IMAGE_UPLOAD_GUIDE.md  RECALL_SYSTEM.md
lambdas/germination-service/: Cargo.toml
lambdas/germination-service/src/: fruit_species.rs  main.rs
lambdas/greenhouse-service/: Cargo.toml
lambdas/greenhouse-service/src/: main.rs
lambdas/image-service/: Cargo.toml
lambdas/image-service/src/: main.rs
lambdas/inventory-service/: Cargo.toml
lambdas/inventory-service/src/: main.rs
lambdas/manufacturing-queue-service/: Cargo.toml
lambdas/manufacturing-queue-service/src/: main.rs
lambdas/plant-processing-service/: Cargo.toml
lambdas/plant-processing-service/src/: main.rs
lambdas/recall-service/: Cargo.toml
lambdas/recall-service/src/: main.rs
lambdas/shipping-service/: Cargo.toml
lambdas/shipping-service/src/: main.rs
lambdas/subscription-service/: Cargo.toml
lambdas/subscription-service/src/: main.rs
mock-server/: Cargo.toml
mock-server/src/: main.rs
shared/database/: Cargo.toml
shared/database/src/: bags.rs  greenhouse.rs  lib.rs  seeds.rs  shipments.rs  subscriptions.rs
shared/models/: Cargo.toml
shared/models/src/: contamination.rs  germination.rs  greenhouse.rs  images.rs  inventory.rs  lib.rs  manufacturing.rs  plant.rs  recalls.rs  shipping.rs  subscription.rs
web/: FEATURE_UPDATE.md  README.md  image-moderation.html  index.html  manufacturing-queue.html  my-images.html  onboarding.html  plant-lookup.html  recall-moderation.html  user-settings.html
