[workspace]
resolver = "2"
members = [
    "lambdas/subscription-service",
    "lambdas/shipping-service",
    "lambdas/inventory-service",
    "lambdas/greenhouse-service",
    "lambdas/plant-processing-service",
    "lambdas/germination-service",
    "lambdas/manufacturing-queue-service",
    "lambdas/image-service",
    "lambdas/recall-service",
    "shared/models",
    "shared/database",
    "mock-server",
]

[workspace.dependencies]
aws_lambda_events = "0.15"
lambda_runtime = "0.11"
tokio = { version = "1.37", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
aws-sdk-dynamodb = "1.28"
aws-config = "1.3"
thiserror = "1.0"
anyhow = "1.0"
