[package]
name = "subscription-service"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../../shared/models" }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

