[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

